[package]
name = "bevy_tasks"
version = "0.16.0-dev"
edition = "2024"
description = "A task executor for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
default = ["std", "async_executor"]

# Functionality

## Enables multi-threading support.
## Without this feature, all tasks will be run on a single thread.
multi_threaded = ["std", "dep:async-channel", "dep:concurrent-queue"]

## Uses `async-executor` as a task execution backend.
## This backend is incompatible with `no_std` targets.
async_executor = ["std", "dep:async-executor"]

# Platform Compatibility

## Allows access to the `std` crate. Enabling this feature will prevent compilation
## on `no_std` targets, but provides access to certain additional features on
## supported platforms.
std = ["futures-lite/std", "async-task/std", "bevy_platform/std"]

## `critical-section` provides the building blocks for synchronization primitives
## on all platforms, including `no_std`.
critical-section = ["bevy_platform/critical-section"]

[dependencies]
bevy_platform = { path = "../bevy_platform", version = "0.16.0-dev", default-features = false, features = [
  "alloc",
] }

futures-lite = { version = "2.0.1", default-features = false, features = [
  "alloc",
] }
async-task = { version = "4.4.0", default-features = false }
derive_more = { version = "1", default-features = false, features = [
  "deref",
  "deref_mut",
] }
cfg-if = "1.0.0"
async-executor = { version = "1.11", optional = true }
async-channel = { version = "2.3.0", optional = true }
async-io = { version = "2.0.0", optional = true }
concurrent-queue = { version = "2.0.0", optional = true }
atomic-waker = { version = "1", default-features = false }
crossbeam-queue = { version = "0.3", default-features = false, features = [
  "alloc",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# TODO: these deps are only required for "web" features
pin-project = { version = "1" }
futures-channel = { version = "0.3" }

[target.'cfg(not(all(target_has_atomic = "8", target_has_atomic = "16", target_has_atomic = "32", target_has_atomic = "64", target_has_atomic = "ptr")))'.dependencies]
async-task = { version = "4.4.0", default-features = false, features = [
  "portable-atomic",
] }
heapless = { version = "0.8", default-features = false, features = [
  "portable-atomic",
] }
atomic-waker = { version = "1", default-features = false, features = [
  "portable-atomic",
] }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
